# healthos

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  ios-ci.yml
backend/: README.md  docker-compose.yml  pyproject.toml
backend/scripts/: down.sh  up.sh
backend/src/healthos_backend/: app.py
backend/tests/: test_health.py
ios/: README.md
ios/HealthOS/HealthOS/HealthOS/: ActivityRingView.swift  ContentView.swift  HealthKitManager.swift  HealthOSApp.swift  Info.plist
ios/HealthOS/HealthOS/HealthOS.xcodeproj/: project.pbxproj
ios/HealthOS/HealthOS/HealthOS.xcodeproj/xcuserdata/mattdepillis.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/HealthOS/HealthOS/HealthOS/HealthKit/: HealthKitManager.swift
ios/HealthOS/HealthOS/HealthOS/Models/: Models.swift
ios/HealthOS/HealthOS/HealthOS/Spotify/: SpotifyAPI.swift  SpotifyAuthManager.swift
ios/HealthOS/HealthOS/HealthOS/Views/: CoachView.swift  ContentView.swift  DailyView.swift  NutritionView.swift  TrendsView.swift  WorkoutsView.swift
ios/HealthOS/HealthOS/HealthOS/Views/Components/: ActivityRingsView.swift  HealthHeaderView.swift  LoadingOverlay.swift  MetricSection.swift  WorkoutRow.swift
shared/contracts/: healthkit_ingest.v1.json
